# ai-manus

./: .env.example  .gitignore  docker-compose-development.yml
backend/: .dockerignore  pyproject.toml
backend/app/: main.py
backend/app/application/services/: agent_service.py  auth_service.py  claw_service.py
backend/app/core/: config.py
backend/app/domain/models/: agent.py  claw.py  event.py  memory.py  message.py  plan.py  session.py  user.py
backend/app/domain/repositories/: claw_repository.py
backend/app/domain/services/: agent_domain_service.py  agent_task_runner.py  claw_domain_service.py
backend/app/domain/services/agents/: base.py  execution.py  planner.py
backend/app/domain/services/flows/: plan_act.py
backend/app/domain/services/prompts/: execution.py  planner.py  runtime.py  system.py
backend/app/domain/utils/: robust_json_parser.py
backend/app/infrastructure/models/: documents.py
backend/app/infrastructure/repositories/: claw_repository.py
backend/app/interfaces/: dependencies.py
backend/app/interfaces/api/: auth_routes.py  claw_routes.py  config_routes.py  openai_routes.py  session_routes.py
backend/app/interfaces/schemas/: auth.py  config.py  event.py  session.py
backend/tests/: conftest.py  test_agent_service_model_config.py  test_anthropic_tool_use_compat.py  test_api_file.py  test_auth_routes.py  test_auth_service_sub2api.py  test_event_mapper_visibility.py  test_execution_agent_visibility.py  test_message_event_normalization.py  test_plan_act_flow.py  test_sandbox_file.py  test_stream_id_handling.py
docs/: README.md  (+4 more)
(+36 files in other folders)
