[project]
name = "backend"
version = "0.1.0"
description = "Backend for AI Manus × Claw — general-purpose AI Agent system with integrated OpenClaw assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.0",
    "beanie>=1.25.0",
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.14.0",
    "cryptography>=3.4.8",
    "debugpy>=1.8.17",
    "docker>=7.1.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "httptools>=0.6.4",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "markdownify>=1.2.0",
    "mcp>=1.9.0",
    "openai>=2.8.0",
    "browser-use>=0.12.1",
    "playwright>=1.42.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.8.0",
    "pymongo>=4.14.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.1",
    "rich>=14.2.0",
    "tavily-python>=0.5.0",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "requests>=2.28.0",
]
